# Ghub4Linux

./: .gitignore  README.md  install.sh  pyproject.toml
contrib/: ghub4linux@.service
data/: com.github.mrschnirschuh.ghub4linux.desktop  com.github.mrschnirschuh.ghub4linux.metainfo.xml  io.github.ghub4linux.desktop  io.github.ghub4linux.metainfo.xml  io.github.glinux.desktop  io.github.glinux.metainfo.xml
data/udev/: 99-ghub4linux.rules  99-glinux.rules
packaging/arch/: PKGBUILD
packaging/flatpak/: com.github.mrschnirschuh.ghub4linux.yml  io.github.ghub4linux.yml  io.github.glinux.yml
src/ghub4linux/: __init__.py  __main__.py  app.py  cli.py  main.py
src/ghub4linux.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ghub4linux/core/: __init__.py  config.py  device.py  hid.py
src/ghub4linux/devices/: __init__.py  g502.py  powerplay.py  pro_dex.py
src/ghub4linux/features/: __init__.py  macros.py  profiles.py
src/ghub4linux/gui/: __init__.py  device_row.py  dpi_panel.py  info_panel.py  lighting_panel.py  macro_panel.py  main_window.py  profile_panel.py
src/glinux/: __init__.py  main.py
src/glinux.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/glinux/core/: __init__.py  config.py  device.py
src/glinux/devices/: __init__.py  g502.py
src/glinux/features/: __init__.py  macros.py  profiles.py
src/glinux/gui/: __init__.py  main_window.py
tests/: __init__.py  test_cli.py  test_config.py  test_device.py  test_macros.py  test_monitor.py  test_profiles.py
