[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghub4linux"
version = "0.1.0"
description = "Logitech G Hub alternative for Linux - Configure DPI, lighting, macros, and profiles for Logitech gaming peripherals"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "ghub4linux Contributors"}
]
keywords = ["logitech", "gaming", "mouse", "dpi", "macros", "rgb", "lighting", "ghub"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
]
requires-python = ">=3.10"
dependencies = [
    "PyGObject>=3.42.0",
    "hidapi>=0.14.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
ghub4linux = "ghub4linux.main:main"

[project.gui-scripts]
ghub4linux-gui = "ghub4linux.main:main"

[project.urls]
Homepage = "https://github.com/MrSchnirschuh/GLinux"
Repository = "https://github.com/MrSchnirschuh/GLinux"
Issues = "https://github.com/MrSchnirschuh/GLinux/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "SIM", "ARG"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
